@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-02T01:39:13Z",
-  "count_outdated" : 903,
-  "uniques_outdated" : 475,
+  "timestamp" : "2022-12-02T16:27:14Z",
+  "count_outdated" : 904,
+  "uniques_outdated" : 476,
   "count" : 922,
   "uniques" : 485,
   "clones" : [
-    {
-      "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 2,
