@@ -1,3 +1,11 @@
+2022-12-02T16:27:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3603375801 # 1086
+* notice: last 14d: unq all: 2 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 475 903 / 485 922
+* notice: next accum: outdated-unq outdated-all / unq all: 476 904 / 485 922
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-18] / []
+
 2022-12-02T01:39:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3598106997 # 1084
 * notice: last 14d: unq all: 2 19
